# plugin-test-app

./: ar.com.nahuelgomez.PluginTestApp.json  meson.build
data/: ar.com.nahuelgomez.PluginTestApp.appdata.xml.in  ar.com.nahuelgomez.PluginTestApp.desktop.in  ar.com.nahuelgomez.PluginTestApp.gschema.xml  meson.build
data/icons/: meson.build
plugins/: meson.build
plugins/python-extension/: meson.build  python-extension.plugin  python-extension.py
plugins/vala-extension/: meson.build  vala-extension.plugin  vala-extension.vala
po/: POTFILES  meson.build
src/: meson.build  plugin-test-app.vala  plugin_test_app.gresource.xml  pta-app-window.ui  pta-app-window.vala  pta-app.vala  pta-extension.vala
